welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:56: error: '<-' expected but ')' found.
	for(k<1 to n)
                    ^PatternPicture:61: error: illegal start of simple expression
}
^