welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def marquer()
{
	baisseBrosse()
	leveBrosse()
}
def DiagHautGauche(c:Color)
{
	setDirection(EST)
	setCouleurBrosse(c)
	avance()
	marquer()
	gauche()
	avance()
	gauche()
	avance()
	marquer()
	gauche()
	avance()
	setDirection(EST)
}
def DiagHautDroite(c:Color)
{
	setDirection(OUEST)
	setCouleurBrosse(c)
	avance()
	marquer()
	droite()
	avance()
	droite()
	avance()
	marquer()
	droite()
	avanec()
	setDirection(OUEST)
}
def motif()
{
	DiagHautGauche(Color.RED)
	avance(2)
	gauche()
	avance(2)
	DiagHautGauche(Color.GREEN)
	recule()
	DiagHautDroite(Color.YELLOW)
	recule(2)
	gauche()
	avance(2)
	DiagHautDroite(Color.BLUE)
	avance(2)
	setDirection(EST)
	
}
def ligne_motif(n:Int)
{
	for(k<1 to n)
	{
		motif()
		avance(4)
	}
}

override def run() {
	for(k<-1 to 2)
	{
		ligne_motif(2)
		gauche()
		avance(4)
	}
}
